test/valid-data/annotation-writeOnly/main.ts
export interface MyObject {
    one?: string;
    /** @writeOnly */
    two?: number;
}
