test/invalid-data/non-union-discriminator/main.ts
/**
 * @discriminator name
 */
export interface MyType {
    name: string;
}
